# sabi

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  bacon.toml  build.rs  mise.toml  vcpkg.json
qml/: main.qml
src/: book.rs  cxxqt_object.rs  epub.cpp  epub.h  epubmanifest.cpp  epubmanifest.h  epubmetadata.cpp  epubmetadata.h  epubpackage.cpp  epubpackage.h  epubspine.cpp  epubspine.h  epubtoc.cpp  epubtoc.h  main.cpp  main.rs  mainwindow.ui
test/: romeo_and_juliet_pg1513.epub  romeo_and_juliet_pg1513_epub3.epub  romeo_and_juliet_pg1513_no_images.epub
